# xmonad

./: .gitignore  default.nix  flake.nix  hie.yaml  my-xmonad.cabal  overlay.nix  shell.nix  stack.yaml  xmonad.cabal  xmonad.hs  xmonadKento.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/: Bindings.hs  Deco.hs  Layouts.hs  Log.hs  Projects.hs  Scratchpads.hs  Themes.hs  Workspaces.hs  xmonad.hs
modules/: default.nix
src/: Bindings.hs  Deco.hs  Layouts.hs  Log.hs  Scratchpads.hs  Search.hs  Themes.hs  Topics.hs  Utils.hs  Workspaces.hs  xmonad.hs
src/Lib/: ConfigurableBar.hs
xmobar/: gamma.xcf  gamma.xpm  keyboard.xbm  keyboard.xpm  xmobar_top
